# zhinengjiajv

./: .gitignore  CMakeLists.txt  camera_test.py  main.cpp  voice_config.json  所有JSON格式文档.md
.claude/: settings.json  settings.local.json
.trae/rules/: project_rules.md
.trae/skills/qt6-qml-dev/: SKILL.md
docs/: project_overview.md  raspberry_pi_python.md
qml/: main.qml
qml/components/: LogCard.qml
qml/pages/: AlertCenterPage.qml  DeviceControlPage.qml  EnergyPage.qml  HomePage.qml  LogPage.qml  SceneEditPage.qml  ScenePage.qml  SecurityPage.qml  SensorPage.qml  SettingsPage.qml
raspi_gateway/: config.py  devices.json  main.py  requirements.txt  sensors.json  test_camera_opencv.py
raspi_gateway/logs/: logger.py
raspi_gateway/network/: tcp_server.py  udp_broadcaster.py  video_streamer.py
raspi_gateway/protocol/: checksum.py  json_packets.py
raspi_gateway/uart/: serial_dispatcher.py  serial_manager.py  serial_parser.py
resources/: resources.qrc
src/: main.cpp
src/communication/: scenetriggerengine.cpp  scenetriggerengine.h  tcpcontroller.cpp  tcpcontroller.h  udpdiscoverer.cpp  udpdiscoverer.h
src/models/: alertmodel.cpp  alertmodel.h  databasemanager.cpp  databasemanager.h  devicemodel.cpp  devicemodel.h  energymodel.cpp  energymodel.h  scenemodel.cpp  scenemodel.h  sensormodel.cpp  sensormodel.h
src/utils/: jsonutils.cpp  jsonutils.h  locationservice.cpp  locationservice.h  md5utils.cpp  md5utils.h  networkmanager.cpp  networkmanager.h  remotevideoimageprovider.h  timeutils.cpp  timeutils.h  videorendertarget.cpp  videorendertarget.h  voicecontroller.cpp  voicecontroller.h  weatherservice.cpp  weatherservice.h
